--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Multisport</title>
+  <title>Suivi des événements sportifs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -16,41 +16,33 @@
       font-size: 1.2rem;
       margin: 0 10px;
     }
-    .live-indicator {
+    .live {
       color: red;
       font-weight: bold;
-      margin-left: 10px;
     }
   </style>
 </head>
 <body class="bg-light">
   <div class="container py-4">
-    <h1 class="text-center mb-4">🏟️ Dashboard Multisport</h1>
+    <h1 class="text-center mb-4">🏁 Événements sportifs à venir</h1>
 
-    <!-- Filtres -->
     <div class="row mb-4">
       <div class="col-md-4">
-        <label for="sportSelect" class="form-label">🏅 Sport</label>
-        <select id="sportSelect" class="form-select">
-          <option value="all">Tous</option>
-          <option value="Football">Football</option>
-          <option value="Basketball">Basketball</option>
-          <option value="Tennis">Tennis</option>
-        </select>
-      </div>
-      <div class="col-md-4">
-        <label for="leagueSelect" class="form-label">🏆 Ligue</label>
+        <label for="leagueSelect" class="form-label">🏆 Compétition</label>
         <select id="leagueSelect" class="form-select">
           <option value="all">Toutes</option>
           <option value="Ligue 1">Ligue 1</option>
           <option value="Premier League">Premier League</option>
           <option value="Serie A">Serie A</option>
           <option value="Bundesliga">Bundesliga</option>
-          <option value="NBA">NBA</option>
-          <option value="ATP">ATP</option>
+          <option value="La Liga">La Liga</option>
+          <option value="Eredivisie">Eredivisie</option>
+          <option value="F1">Formule 1</option>
+          <option value="MotoGP">MotoGP</option>
+          <option value="WRC">WRC</option>
         </select>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-4">
         <label for="daySelect" class="form-label">📅 Jour</label>
         <select id="daySelect" class="form-select">
           <option value="0">Aujourd’hui</option>
@@ -58,13 +50,13 @@
           <option value="2">Après-demain</option>
         </select>
       </div>
-      <div class="col-md-2 d-flex align-items-end">
+      <div class="col-md-4 d-flex align-items-end">
         <button class="btn btn-outline-primary w-100" id="weekBtn">🔁 Semaine</button>
       </div>
     </div>
 
     <div id="match-list" class="row g-4"></div>
-    <p class="text-center mt-4 text-muted" id="refresh-note">🔄 Mise à jour auto toutes les 60 secondes</p>
+    <p class="text-center mt-4 text-muted">🔄 Mise à jour auto toutes les 60 secondes</p>
   </div>
 
   <script>
@@ -75,15 +67,18 @@
       return date.toISOString().split('T')[0];
     };
 
+    const isPayTV = (channel) => ["Canal+", "BeIN Sports", "DAZN"].includes(channel);
+
     const matches = [
-      { sport: "Football", date: getDateWithOffset(0), competition: "Ligue 1", time: "20:45", channel: { name: "Canal+", paid: true, url: "https://www.canalplus.com" }, status: "À venir", home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null }, away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null }},
-      { sport: "Football", date: getDateWithOffset(3), competition: "Bundesliga", time: "19:00", channel: { name: "BeIN Sports", paid: true, url: "https://www.beinsports.com" }, status: "Live", home: { name: "Bayern", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_München_logo_%282017%29.svg", score: 1 }, away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: 0 }},
-      { sport: "Basketball", date: getDateWithOffset(0), competition: "NBA", time: "02:00", channel: { name: "NBA TV", paid: false, url: "https://www.nba.com" }, status: "À venir", home: { name: "Lakers", logo: "https://upload.wikimedia.org/wikipedia/commons/3/3c/Los_Angeles_Lakers_logo.svg", score: null }, away: { name: "Warriors", logo: "https://upload.wikimedia.org/wikipedia/en/0/01/Golden_State_Warriors_logo.svg", score: null }},
-      { sport: "Tennis", date: getDateWithOffset(1), competition: "ATP", time: "14:00", channel: { name: "Eurosport", paid: true, url: "https://www.eurosport.fr" }, status: "À venir", home: { name: "Nadal", logo: "https://upload.wikimedia.org/wikipedia/commons/2/2e/Rafael_Nadal_2011_2.jpg", score: null }, away: { name: "Djokovic", logo: "https://upload.wikimedia.org/wikipedia/commons/f/f7/Novak_Djokovic_in_2019.jpg", score: null }}
+      { date: getDateWithOffset(0), competition: "Ligue 1", time: "20:45", status: "À venir", home: { name: "PSG", logo: "https://upload.wikimedia.org/wikipedia/en/a/a7/Paris_Saint-Germain_F.C..svg", score: null }, away: { name: "Lyon", logo: "https://upload.wikimedia.org/wikipedia/en/c/c6/Olympique_Lyonnais_logo.svg", score: null }, channel: "Amazon Prime", stream: "https://www.amazon.fr" },
+      { date: getDateWithOffset(1), competition: "Premier League", time: "18:30", status: "À venir", home: { name: "Man City", logo: "https://upload.wikimedia.org/wikipedia/en/e/eb/Manchester_City_FC_badge.svg", score: null }, away: { name: "Liverpool", logo: "https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg", score: null }, channel: "Canal+", stream: "https://www.canalplus.com" },
+      { date: getDateWithOffset(2), competition: "Serie A", time: "21:00", status: "À venir", home: { name: "Juventus", logo: "https://upload.wikimedia.org/wikipedia/commons/1/15/Juventus_FC_2017_logo.svg", score: null }, away: { name: "AC Milan", logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Logo_of_AC_Milan.svg", score: null }, channel: "BeIN Sports", stream: "https://www.beinsports.com" },
+      { date: getDateWithOffset(3), competition: "Bundesliga", time: "19:00", status: "En cours", home: { name: "Bayern Munich", logo: "https://upload.wikimedia.org/wikipedia/en/1/1f/FC_Bayern_M%C3%BCnchen_logo_%282017%29.svg", score: 2 }, away: { name: "Dortmund", logo: "https://upload.wikimedia.org/wikipedia/commons/6/67/Borussia_Dortmund_logo.svg", score: 1 }, channel: "DAZN", stream: "https://www.dazn.com" },
+      { date: getDateWithOffset(1), competition: "F1", time: "15:00", status: "À venir", home: { name: "Grand Prix d'Italie", logo: "https://upload.wikimedia.org/wikipedia/commons/3/33/F1.svg" }, away: { name: "Monza", logo: "https://upload.wikimedia.org/wikipedia/commons/e/e7/Flag_of_Italy.svg" }, channel: "Canal+", stream: "https://www.canalplus.com/sport/f1" },
+      { date: getDateWithOffset(2), competition: "MotoGP", time: "14:00", status: "À venir", home: { name: "GP d'Espagne", logo: "https://upload.wikimedia.org/wikipedia/commons/5/56/MotoGP_logo.svg" }, away: { name: "Jerez", logo: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg" }, channel: "DAZN", stream: "https://www.dazn.com/fr-FR/sport" }
     ];
 
     const leagueSelect = document.getElementById('leagueSelect');
-    const sportSelect = document.getElementById('sportSelect');
     const daySelect = document.getElementById('daySelect');
     const weekBtn = document.getElementById('weekBtn');
     const matchList = document.getElementById('match-list');
@@ -91,60 +86,52 @@
     let showWeek = false;
 
     function getCountdownText(dateStr, timeStr) {
-      const matchDate = new Date(`${dateStr}T${timeStr}:00`);
+      const matchDate = new Date(`${dateStr}T${timeStr}:00Z`);
       const now = new Date();
       const diff = matchDate - now;
-      if (diff <= 0) return '<span class="live-indicator">🔴 Match en cours</span>';
+      if (diff <= 0 && diff > -7200000) return "<span class='live'>🔴 En direct</span>";
+      if (diff <= 0) return "Match terminé";
+
       const minutes = Math.floor((diff / 1000 / 60) % 60);
       const hours = Math.floor((diff / 1000 / 60 / 60));
       return `Débute dans ${hours}h ${minutes}min`;
     }
 
     function renderMatches() {
-      const selectedSport = sportSelect.value;
       const selectedLeague = leagueSelect.value;
       const selectedDay = parseInt(daySelect.value);
       const targetDate = getDateWithOffset(selectedDay);
 
-      let filtered = matches.filter(m =>
-        (selectedSport === "all" || m.sport === selectedSport) &&
-        (selectedLeague === "all" || m.competition === selectedLeague)
-      );
-
+      let filtered = matches.filter(m => selectedLeague === "all" || m.competition === selectedLeague);
       if (!showWeek) {
         filtered = filtered.filter(m => m.date === targetDate);
       }
 
-      matchList.innerHTML = "";
-      if (filtered.length === 0) {
-        matchList.innerHTML = `<p class="text-center">Aucun match trouvé.</p>`;
-        return;
-      }
+      matchList.innerHTML = filtered.length ? "" : `<p class="text-center">Aucun événement trouvé.</p>`;
 
       filtered.forEach(match => {
-        const scoreDisplay = match.home.score !== null ? `${match.home.score} - ${match.away.score}` : "vs";
-        const countdown = match.status === "Live" ? '<span class="live-indicator">🔴 En direct</span>' : getCountdownText(match.date, match.time);
-        const channelLink = match.channel.paid ? `<a href="${match.channel.url}" target="_blank" class="badge text-bg-danger">${match.channel.name} 🔗</a>` : `<a href="${match.channel.url}" target="_blank" class="badge text-bg-success">${match.channel.name}</a>`;
+        const isMotorsport = ["F1", "MotoGP", "WRC"].includes(match.competition);
+        const countdown = getCountdownText(match.date, match.time);
 
         const div = document.createElement("div");
         div.className = "col-md-6";
         div.innerHTML = `
           <div class="card p-3 shadow-sm">
-            <h6 class="text-muted">${match.sport} — ${match.competition} — ${match.date}</h6>
-            <div class="d-flex align-items-center justify-content-between">
+            <h6 class="text-muted">${match.competition} — ${match.date}</h6>
+            <div class="d-flex align-items-center justify-content-${isMotorsport ? "center" : "between"}">
               <div class="d-flex align-items-center">
-                <img src="${match.home.logo}" class="team-logo me-2" alt="${match.home.name}">
+                <img src="${match.home.logo}" class="team-logo me-2">
                 <span>${match.home.name}</span>
               </div>
-              <div class="vs">${scoreDisplay}</div>
+              ${!isMotorsport ? `<div class="vs">${match.home.score != null ? `${match.home.score} - ${match.away.score}` : "vs"}</div>` : "<span class='mx-2'>—</span>"}
               <div class="d-flex align-items-center">
                 <span>${match.away.name}</span>
-                <img src="${match.away.logo}" class="team-logo ms-2" alt="${match.away.name}">
+                <img src="${match.away.logo}" class="team-logo ms-2">
               </div>
             </div>
             <p class="mb-0 mt-2">Heure : ${match.time}</p>
-            <p>${countdown}</p>
-            <p>📺 Diffusé sur : ${channelLink}</p>
+            <p class="mb-0">📺 Chaîne : ${isPayTV(match.channel) ? `<a href="${match.stream}" target="_blank">${match.channel}</a>` : match.channel}</p>
+            <p class="text-primary">${countdown}</p>
           </div>
         `;
         matchList.appendChild(div);
@@ -152,21 +139,15 @@
     }
 
     leagueSelect.addEventListener("change", renderMatches);
-    sportSelect.addEventListener("change", renderMatches);
-    daySelect.addEventListener("change", () => {
-      showWeek = false;
-      renderMatches();
-    });
-    weekBtn.addEventListener("click", () => {
-      showWeek = true;
-      renderMatches();
-    });
+    daySelect.addEventListener("change", () => { showWeek = false; renderMatches(); });
+    weekBtn.addEventListener("click", () => { showWeek = true; renderMatches(); });
 
     setInterval(renderMatches, 60000);
     renderMatches();
   </script>
 </body>
 </html>
+
 
 
 
