--- a/index.html
+++ b/index.html
@@ -2,234 +2,166 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <title>Planning Sportif 🔥</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Planning Sportif</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
-    .team-logo {
-      width: 30px;
-      height: 30px;
-      object-fit: contain;
-    }
-    .vs {
-      font-weight: bold;
-      font-size: 1.2rem;
-      margin: 0 10px;
-    }
-    .live-indicator {
-      color: red;
-      font-weight: bold;
-    }
-    .card {
-      border-radius: 1rem;
-    }
+    .team-logo { width: 30px; height: 30px; object-fit: contain; }
+    .live-badge { color: red; font-weight: bold; margin-left: 10px; }
+    #adminPanel { display: none; }
   </style>
 </head>
 <body class="bg-light">
+  <div class="container py-4">
+    <h1 class="text-center mb-4">📅 Planning Sportif Multisport</h1>
 
-<div class="container py-4">
-  <h1 class="text-center mb-4">🏟️ Planning Sportif</h1>
-
-  <!-- Filtres -->
-  <div class="row mb-4">
-    <div class="col-md-4">
-      <label class="form-label">⚽ Sport</label>
-      <select id="sportSelect" class="form-select">
-        <option value="all">Tous</option>
-        <option value="football">Football</option>
-        <option value="basketball">Basketball</option>
-        <option value="rugby">Rugby</option>
-        <option value="F1">F1</option>
-        <option value="MotoGP">MotoGP</option>
-        <option value="WRC">WRC</option>
-      </select>
+    <div class="text-end mb-2">
+      <button id="loginBtn" class="btn btn-outline-primary btn-sm">Connexion Admin 🔐</button>
+      <button id="logoutBtn" class="btn btn-outline-danger btn-sm d-none">Déconnexion</button>
     </div>
-    <div class="col-md-4">
-      <label class="form-label">📅 Jour</label>
-      <select id="daySelect" class="form-select">
-        <option value="0">Aujourd'hui</option>
-        <option value="1">Demain</option>
-        <option value="2">Après-demain</option>
-      </select>
-    </div>
-    <div class="col-md-4 d-flex align-items-end">
-      <button class="btn btn-outline-primary w-100" id="weekBtn">🔁 Afficher toute la semaine</button>
-    </div>
-  </div>
 
-  <!-- Liste des matchs -->
-  <div id="match-list" class="row g-4"></div>
-
-  <!-- Formulaire admin -->
-  <div class="mt-5">
-    <h4>➕ Ajouter un événement (admin)</h4>
-    <form id="eventForm" class="row g-3">
-      <div class="col-md-4">
-        <input type="text" class="form-control" placeholder="Sport (ex: football)" id="formSport" required>
-      </div>
-      <div class="col-md-4">
-        <input type="text" class="form-control" placeholder="Compétition" id="formCompetition" required>
-      </div>
-      <div class="col-md-4">
-        <input type="date" class="form-control" id="formDate" required>
-      </div>
-      <div class="col-md-3">
-        <input type="time" class="form-control" id="formHeure" required>
-      </div>
-      <div class="col-md-3">
-        <input type="text" class="form-control" placeholder="Équipe domicile" id="formDomicile" required>
-      </div>
-      <div class="col-md-3">
-        <input type="text" class="form-control" placeholder="Équipe extérieur" id="formExterieur" required>
-      </div>
-      <div class="col-md-3">
-        <input type="text" class="form-control" placeholder="Chaîne (ex: beIN)" id="formChaine">
-      </div>
-      <div class="col-md-6">
-        <input type="url" class="form-control" placeholder="Lien chaîne (si payante)" id="formLienChaine">
-      </div>
-      <div class="col-md-3">
-        <select class="form-select" id="formPayant">
-          <option value="false">Gratuit</option>
-          <option value="true">Payant</option>
-        </select>
-      </div>
-      <div class="col-md-3">
-        <select class="form-select" id="formLive">
-          <option value="false">Non en direct</option>
-          <option value="true">En direct</option>
-        </select>
-      </div>
-      <div class="col-12 text-end">
-        <button type="submit" class="btn btn-success">Ajouter</button>
-      </div>
-    </form>
-  </div>
-</div>
-
-<!-- Firebase SDK + JS -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-  import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
-
-  const firebaseConfig = {
-    apiKey: "AIzaSyBToR5BXaPHsg8GgMosJBMompqUU1LBGG8",
-    authDomain: "planning-sports.firebaseapp.com",
-    projectId: "planning-sports",
-    storageBucket: "planning-sports.appspot.com",
-    messagingSenderId: "808656601330",
-    appId: "1:808656601330:web:02c6c6c54e4cc705d6d06b"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
-
-  const sportSelect = document.getElementById("sportSelect");
-  const daySelect = document.getElementById("daySelect");
-  const weekBtn = document.getElementById("weekBtn");
-  const matchList = document.getElementById("match-list");
-
-  let showWeek = false;
-
-  const getDateWithOffset = offset => {
-    const d = new Date();
-    d.setDate(d.getDate() + offset);
-    return d.toISOString().split("T")[0];
-  };
-
-  async function fetchEvents() {
-    const snapshot = await getDocs(collection(db, "evenements"));
-    return snapshot.docs.map(doc => doc.data());
-  }
-
-  function getCountdown(dateStr, timeStr) {
-    const matchDate = new Date(`${dateStr}T${timeStr}`);
-    const now = new Date();
-    const diff = matchDate - now;
-    if (diff <= 0) return `<span class="live-indicator">🔴 En direct</span>`;
-    const min = Math.floor((diff / 1000 / 60) % 60);
-    const hr = Math.floor((diff / 1000 / 60 / 60));
-    return `Débute dans ${hr}h ${min}min`;
-  }
-
-  async function renderMatches() {
-    const sport = sportSelect.value;
-    const dayOffset = parseInt(daySelect.value);
-    const targetDate = getDateWithOffset(dayOffset);
-    const all = await fetchEvents();
-
-    let filtered = all.filter(e => sport === "all" || e.sport === sport);
-    if (!showWeek) {
-      filtered = filtered.filter(e => e.date === targetDate);
-    }
-
-    matchList.innerHTML = "";
-    if (!filtered.length) {
-      matchList.innerHTML = "<p class='text-center'>Aucun événement</p>";
-      return;
-    }
-
-    filtered.forEach(e => {
-      const countdown = e.enCours === "true" || e.enCours === true
-        ? `<span class="live-indicator">🔴 En direct</span>`
-        : getCountdown(e.date, e.heure);
-
-      const chaine = e.chaine
-        ? (e.payant === "true" || e.payant === true
-            ? `<a href="${e.lienChaine}" target="_blank">📺 ${e.chaine} (payant)</a>`
-            : `📺 ${e.chaine}`)
-        : "—";
-
-      matchList.innerHTML += `
-        <div class="col-md-6">
-          <div class="card p-3 shadow-sm">
-            <h6 class="text-muted">${e.competition} — ${e.date} à ${e.heure}</h6>
-            <div class="d-flex align-items-center justify-content-between">
-              <div>${e.domicile}</div>
-              <div class="vs">vs</div>
-              <div>${e.exterieur}</div>
-            </div>
-            <p class="mt-2">${chaine}</p>
-            <p class="text-primary">${countdown}</p>
-          </div>
+    <div id="adminPanel" class="mb-4 border rounded p-3 bg-white shadow-sm">
+      <h5>➕ Ajouter un match</h5>
+      <form id="matchForm" class="row g-2">
+        <input type="text" class="form-control" placeholder="Sport" id="sport" required>
+        <input type="text" class="form-control" placeholder="Compétition" id="competition" required>
+        <input type="date" class="form-control" id="date" required>
+        <input type="time" class="form-control" id="time" required>
+        <input type="text" class="form-control" placeholder="Équipe Domicile" id="homeName" required>
+        <input type="url" class="form-control" placeholder="Logo Domicile" id="homeLogo" required>
+        <input type="text" class="form-control" placeholder="Équipe Extérieure" id="awayName" required>
+        <input type="url" class="form-control" placeholder="Logo Extérieure" id="awayLogo" required>
+        <input type="text" class="form-control" placeholder="Chaîne TV" id="channelName" required>
+        <input type="url" class="form-control" placeholder="Lien Streaming (si payant)" id="channelUrl">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="channelPaid">
+          <label class="form-check-label" for="channelPaid">Chaîne payante</label>
         </div>
-      `;
+        <button type="submit" class="btn btn-success mt-2">Ajouter</button>
+      </form>
+    </div>
+
+    <div id="match-list" class="row g-4"></div>
+  </div>
+
+  <script type="module">
+    import { db, auth } from './firebase-config.js';
+    import { collection, addDoc, onSnapshot, query, where, orderBy } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+    import { signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-auth.js";
+
+    const matchList = document.getElementById("match-list");
+    const matchForm = document.getElementById("matchForm");
+    const loginBtn = document.getElementById("loginBtn");
+    const logoutBtn = document.getElementById("logoutBtn");
+    const adminPanel = document.getElementById("adminPanel");
+
+    // Connexion Google Admin
+    loginBtn.addEventListener("click", async () => {
+      const provider = new GoogleAuthProvider();
+      try {
+        await signInWithPopup(auth, provider);
+      } catch (err) {
+        alert("Erreur de connexion");
+        console.error(err);
+      }
     });
-  }
 
-  sportSelect.addEventListener("change", renderMatches);
-  daySelect.addEventListener("change", () => {
-    showWeek = false;
-    renderMatches();
-  });
-  weekBtn.addEventListener("click", () => {
-    showWeek = true;
-    renderMatches();
-  });
+    logoutBtn.addEventListener("click", async () => {
+      await signOut(auth);
+    });
 
-  // Formulaire d'ajout
-  document.getElementById("eventForm").addEventListener("submit", async (e) => {
-    e.preventDefault();
-    const newEvent = {
-      sport: formSport.value,
-      competition: formCompetition.value,
-      date: formDate.value,
-      heure: formHeure.value,
-      domicile: formDomicile.value,
-      exterieur: formExterieur.value,
-      chaine: formChaine.value,
-      lienChaine: formLienChaine.value,
-      payant: formPayant.value === "true",
-      enCours: formLive.value === "true"
-    };
-    await addDoc(collection(db, "evenements"), newEvent);
-    alert("✅ Événement ajouté !");
-    renderMatches();
-    e.target.reset();
-  });
+    onAuthStateChanged(auth, user => {
+      const isAdmin = user && user.email.endsWith("@gmail.com"); // tu peux adapter
+      if (isAdmin) {
+        adminPanel.style.display = "block";
+        loginBtn.classList.add("d-none");
+        logoutBtn.classList.remove("d-none");
+      } else {
+        adminPanel.style.display = "none";
+        loginBtn.classList.remove("d-none");
+        logoutBtn.classList.add("d-none");
+      }
+    });
 
-  setInterval(renderMatches, 60000);
-  renderMatches();
-</script>
+    // Formulaire d'ajout de match
+    matchForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = {
+        sport: sport.value,
+        competition: competition.value,
+        date: date.value,
+        time: time.value,
+        home: { name: homeName.value, logo: homeLogo.value, score: null },
+        away: { name: awayName.value, logo: awayLogo.value, score: null },
+        channel: {
+          name: channelName.value,
+          paid: channelPaid.checked,
+          url: channelPaid.checked ? channelUrl.value : null
+        }
+      };
+      try {
+        await addDoc(collection(db, "matches"), data);
+        alert("✅ Match ajouté");
+        matchForm.reset();
+      } catch (err) {
+        console.error(err);
+        alert("Erreur lors de l’ajout");
+      }
+    });
+
+    // 🔄 Rendu en temps réel
+    const q = query(
+      collection(db, "matches"),
+      where("date", ">=", new Date().toISOString().split('T')[0]),
+      orderBy("date"),
+      orderBy("time")
+    );
+
+    onSnapshot(q, (snapshot) => {
+      const matches = snapshot.docs.map(doc => doc.data());
+      matchList.innerHTML = "";
+
+      if (matches.length === 0) {
+        matchList.innerHTML = `<p class="text-center">Aucun match à venir</p>`;
+        return;
+      }
+
+      matches.forEach(match => {
+        const isLive = isMatchLive(match.date, match.time);
+        const liveBadge = isLive ? `<span class="live-badge">🔴 EN DIRECT</span>` : "";
+
+        matchList.innerHTML += `
+          <div class="col-md-6">
+            <div class="card shadow-sm p-3">
+              <h6 class="text-muted">${match.sport} – ${match.competition} — ${match.date} ${liveBadge}</h6>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center">
+                  <img src="${match.home.logo}" class="team-logo me-2">
+                  <strong>${match.home.name}</strong>
+                </div>
+                <span>vs</span>
+                <div class="d-flex align-items-center">
+                  <strong>${match.away.name}</strong>
+                  <img src="${match.away.logo}" class="team-logo ms-2">
+                </div>
+              </div>
+              <p class="mt-2 mb-1">⏰ ${match.time}</p>
+              <p class="mb-1">📺 ${match.channel.paid 
+                ? `<a href="${match.channel.url}" target="_blank">${match.channel.name} (payant)</a>` 
+                : match.channel.name}</p>
+            </div>
+          </div>
+        `;
+      });
+    });
+
+    function isMatchLive(dateStr, timeStr) {
+      const now = new Date();
+      const start = new Date(`${dateStr}T${timeStr}:00`);
+      const end = new Date(start.getTime() + 2 * 60 * 60 * 1000);
+      return now >= start && now <= end;
+    }
+  </script>
 </body>
 </html>
+
